[metadata]
name = brain
version = 1.0
author = Naveed Nilawfar
author_email = naveednilawfar@gmail.com
description = The human brain implemented in python (AI).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/naveednilawfar/brain
project_urls =
    Bug Tracker = https://github.com/naveednilawfar/brain/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
